# esp-dfi-ignah

./: .gitignore  .gitmodules  README.md  partitions.csv  sdkconfig
.github/workflows/: build.yml
main/: Application.cxx  Application.hpp  CMakeLists.txt  Timebase.hpp  idf_component.yml  sync.hpp
main/dfi/: Dfi.cxx  Dfi.hpp  DriverInterface.hpp  HttpClient.cxx  HttpClient.hpp  Timebase.hpp
main/led/: LedControl.cxx  LedControl.hpp  RenderTask.cxx  RenderTask.hpp
main/light_sensor/: AD7417.cxx  AD7417.hpp  AD7417_constants.hpp  EspI2cAccessor.hpp  I2cBusAccessor.hpp  LightSensor.cxx  LightSensor.hpp
main/nvm/: NonVolatileMemory.hpp  Settings.hpp
main/rest/: RestApiHandlers.cxx  RestApiHandlers.hpp  RestServer.cxx  RestServer.hpp  api.md
main/wifi/: Wireless.cxx  Wireless.hpp
web-ui/esp-dfi-ignah-ui/: README.md  angular.json  compress-files.sh  karma.conf.js  package-lock.json  package.json
web-ui/esp-dfi-ignah-ui/src/: color-palettes.scss  index.html  media.scss  styles.scss  theme.scss
web-ui/esp-dfi-ignah-ui/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
web-ui/esp-dfi-ignah-ui/src/app/components/display/: display.component.html  display.component.scss  display.component.ts
web-ui/esp-dfi-ignah-ui/src/app/components/display/additional-vehicles/: additional-vehicles.component.html  additional-vehicles.component.ts
web-ui/esp-dfi-ignah-ui/src/app/components/display/additional-vehicles/vehicle-dialog/: vehicle-dialog.component.html  vehicle-dialog.component.ts
web-ui/esp-dfi-ignah-ui/src/app/components/display/free-text/: free-text.component.html  free-text.component.scss  free-text.component.ts
web-ui/esp-dfi-ignah-ui/src/app/components/display/running-text/: running-text.component.html  running-text.component.scss  running-text.component.ts
web-ui/esp-dfi-ignah-ui/src/app/components/home/: home.component.html
web-ui/esp-dfi-ignah-ui/src/app/components/settings/: settings.component.html  settings.component.scss  settings.component.ts
web-ui/esp-dfi-ignah-ui/src/app/data/: navigation.ts
web-ui/esp-dfi-ignah-ui/src/app/models/: additional-vehicles.ts  dfi-station-settings.ts  free-text.ts  light-sensor.ts  mode.ts  running-text.ts  system-clock.ts  system-info.ts  wifi-station-settings.ts
web-ui/esp-dfi-ignah-ui/src/app/services/: host.service.ts  theming.service.ts
web-ui/esp-dfi-ignah-ui/src/app/services/api/: mode.service.ts  system.service.ts  text.service.ts  vehicle.service.ts  wifi.service.ts
web-ui/esp-dfi-ignah-ui/src/app/store/mode/: index.ts  mode.actions.ts  mode.effects.ts  mode.reducer.ts  mode.selectors.ts
web-ui/esp-dfi-ignah-ui/src/environments/: environment.prod.ts  environment.ts
